--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "台灣食品法規查詢系統",
+  "name": "tfda-ssot-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,14 +10,16 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "idb-keyval": "^6.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "typescript": "^5.8.2",
     "vite": "^6.2.0"
   }
 }
