--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tfda-ssot-frontend",
+  "name": "台灣食品法規查詢系統",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,17 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.34.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "idb-keyval": "^6.2.1"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "idb-keyval": "^6.2.1",
+    "@google/genai": "^1.37.0",
+    "googleapis": "^170.1.0",
+    "@vercel/kv": "^3.0.0",
+    "@vercel/blob": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "typescript": "^5.8.2",
+    "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
 }
